--- a/styles/style.scss
+++ b/styles/style.scss
@@ -97,8 +97,10 @@ $gray-text: #2c2c2c;
 
   .buttons {
     width: 100%;
+ 
     button {
       width: 49.5%;
+      margin: 0
     }
   }
 
